--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
             </div>
         </div>
     </main>
-    <script src="./script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
